fix text-overflow on phone bug

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: flex-start;
     text-align: center;
-    max-width: 1000px;
+    max-width: min(100vw, 1000px);
 }
 
 .main {
